--- a/English.lproj/PassengerPaneCocoaPref.xib
+++ b/English.lproj/PassengerPaneCocoaPref.xib
@@ -12,7 +12,7 @@
 		</object>
 		<array class="NSMutableArray" key="IBDocument.EditedObjectIDs">
 			<integer value="6"/>
-			<integer value="854"/>
+			<integer value="859"/>
 		</array>
 		<array key="IBDocument.PluginDependencies">
 			<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -1637,6 +1637,23 @@ AAMAAAABAAEAAAFTAAMAAAAEAAAFwgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 								<int key="NSPeriodicInterval">75</int>
 							</object>
 						</object>
+						<object class="NSTextField" id="468173298">
+							<reference key="NSNextResponder" ref="441654173"/>
+							<int key="NSvFlags">268</int>
+							<string key="NSFrame">{{17, 20}, {402, 17}}</string>
+							<reference key="NSSuperview" ref="441654173"/>
+							<bool key="NSEnabled">YES</bool>
+							<object class="NSTextFieldCell" key="NSCell" id="902495398">
+								<int key="NSCellFlags">68288064</int>
+								<int key="NSCellFlags2">4199424</int>
+								<string key="NSContents"/>
+								<reference key="NSSupport" ref="352769653"/>
+								<string key="NSPlaceholderString">Configured Properly</string>
+								<reference key="NSControlView" ref="468173298"/>
+								<reference key="NSBackgroundColor" ref="431751689"/>
+								<reference key="NSTextColor" ref="1064423489"/>
+							</object>
+						</object>
 					</array>
 					<string key="NSFrameSize">{500, 300}</string>
 					<reference key="NSSuperview"/>
@@ -1657,7 +1674,7 @@ AAMAAAABAAEAAAFTAAMAAAAEAAAFwgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 				<nil key="NSViewClass"/>
 				<string key="NSWindowContentMaxSize">{1.79769e+308, 1.79769e+308}</string>
 				<object class="NSView" key="NSWindowView" id="316503432">
-					<reference key="NSNextResponder"/>
+					<nil key="NSNextResponder"/>
 					<int key="NSvFlags">256</int>
 					<array class="NSMutableArray" key="NSSubviews">
 						<object class="NSBox" id="623396282">
@@ -1673,7 +1690,6 @@ AAMAAAABAAEAAAFTAAMAAAAEAAAFwgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 											<int key="NSvFlags">268</int>
 											<string key="NSFrame">{{18, 37}, {139, 19}}</string>
 											<reference key="NSSuperview" ref="419656777"/>
-											<reference key="NSWindow"/>
 											<bool key="NSEnabled">YES</bool>
 											<object class="NSButtonCell" key="NSCell" id="451865321">
 												<int key="NSCellFlags">-1543373312</int>
@@ -1694,7 +1710,6 @@ AAMAAAABAAEAAAFTAAMAAAAEAAAFwgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 											<int key="NSvFlags">268</int>
 											<string key="NSFrame">{{18, 12}, {139, 19}}</string>
 											<reference key="NSSuperview" ref="419656777"/>
-											<reference key="NSWindow"/>
 											<bool key="NSEnabled">YES</bool>
 											<object class="NSButtonCell" key="NSCell" id="336907157">
 												<int key="NSCellFlags">-1543373312</int>
@@ -1713,12 +1728,10 @@ AAMAAAABAAEAAAFTAAMAAAAEAAAFwgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 									</array>
 									<string key="NSFrame">{{1, 1}, {180, 66}}</string>
 									<reference key="NSSuperview" ref="623396282"/>
-									<reference key="NSWindow"/>
 								</object>
 							</array>
 							<string key="NSFrame">{{17, 173}, {182, 82}}</string>
 							<reference key="NSSuperview" ref="316503432"/>
-							<reference key="NSWindow"/>
 							<string key="NSOffsets">{0, 0}</string>
 							<object class="NSTextFieldCell" key="NSTitleCell">
 								<int key="NSCellFlags">67239424</int>
@@ -1758,14 +1771,12 @@ AAMAAAABAAEAAAFTAAMAAAAEAAAFwgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 															<int key="NSvFlags">256</int>
 															<string key="NSFrameSize">{242, 133}</string>
 															<reference key="NSSuperview" ref="270632387"/>
-															<reference key="NSWindow"/>
 															<bool key="NSEnabled">YES</bool>
 															<object class="NSTableHeaderView" key="NSHeaderView" id="178436210">
 																<reference key="NSNextResponder" ref="568686999"/>
 																<int key="NSvFlags">256</int>
 																<string key="NSFrameSize">{242, 17}</string>
 																<reference key="NSSuperview" ref="568686999"/>
-																<reference key="NSWindow"/>
 																<reference key="NSTableView" ref="293001040"/>
 															</object>
 															<object class="_NSCornerView" key="NSCornerView" id="850301758">
@@ -1773,7 +1784,6 @@ AAMAAAABAAEAAAFTAAMAAAAEAAAFwgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 																<int key="NSvFlags">-2147483392</int>
 																<string key="NSFrame">{{224, 0}, {16, 17}}</string>
 																<reference key="NSSuperview" ref="1023835460"/>
-																<reference key="NSWindow"/>
 															</object>
 															<array class="NSMutableArray" key="NSTableColumns">
 																<object class="NSTableColumn" id="152526799">
@@ -1864,7 +1874,6 @@ AAMAAAABAAEAAAFTAAMAAAAEAAAFwgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 													</array>
 													<string key="NSFrame">{{1, 17}, {242, 133}}</string>
 													<reference key="NSSuperview" ref="1023835460"/>
-													<reference key="NSWindow"/>
 													<reference key="NSNextKeyView" ref="293001040"/>
 													<reference key="NSDocView" ref="293001040"/>
 													<reference key="NSBGColor" ref="345056110"/>
@@ -1875,7 +1884,6 @@ AAMAAAABAAEAAAFTAAMAAAAEAAAFwgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 													<int key="NSvFlags">-2147483392</int>
 													<string key="NSFrame">{{224, 17}, {15, 102}}</string>
 													<reference key="NSSuperview" ref="1023835460"/>
-													<reference key="NSWindow"/>
 													<reference key="NSTarget" ref="1023835460"/>
 													<string key="NSAction">_doScroller:</string>
 													<double key="NSCurValue">1</double>
@@ -1886,7 +1894,6 @@ AAMAAAABAAEAAAFTAAMAAAAEAAAFwgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 													<int key="NSvFlags">-2147483392</int>
 													<string key="NSFrame">{{1, 116}, {142, 15}}</string>
 													<reference key="NSSuperview" ref="1023835460"/>
-													<reference key="NSWindow"/>
 													<int key="NSsFlags">1</int>
 													<reference key="NSTarget" ref="1023835460"/>
 													<string key="NSAction">_doScroller:</string>
@@ -1900,7 +1907,6 @@ AAMAAAABAAEAAAFTAAMAAAAEAAAFwgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 													</array>
 													<string key="NSFrame">{{1, 0}, {242, 17}}</string>
 													<reference key="NSSuperview" ref="1023835460"/>
-													<reference key="NSWindow"/>
 													<reference key="NSNextKeyView" ref="178436210"/>
 													<reference key="NSDocView" ref="178436210"/>
 													<reference key="NSBGColor" ref="345056110"/>
@@ -1910,7 +1916,6 @@ AAMAAAABAAEAAAFTAAMAAAAEAAAFwgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 											</array>
 											<string key="NSFrame">{{18, 37}, {244, 151}}</string>
 											<reference key="NSSuperview" ref="455863953"/>
-											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="270632387"/>
 											<int key="NSsFlags">562</int>
 											<reference key="NSVScroller" ref="427872713"/>
@@ -1925,7 +1930,6 @@ AAMAAAABAAEAAAFTAAMAAAAEAAAFwgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 											<int key="NSvFlags">268</int>
 											<string key="NSFrame">{{18, 10}, {38, 19}}</string>
 											<reference key="NSSuperview" ref="455863953"/>
-											<reference key="NSWindow"/>
 											<bool key="NSEnabled">YES</bool>
 											<object class="NSButtonCell" key="NSCell" id="792770111">
 												<int key="NSCellFlags">-2080244224</int>
@@ -1947,7 +1951,6 @@ AAMAAAABAAEAAAFTAAMAAAAEAAAFwgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 											<int key="NSvFlags">268</int>
 											<string key="NSFrame">{{64, 10}, {38, 19}}</string>
 											<reference key="NSSuperview" ref="455863953"/>
-											<reference key="NSWindow"/>
 											<bool key="NSEnabled">YES</bool>
 											<object class="NSButtonCell" key="NSCell" id="76482567">
 												<int key="NSCellFlags">-2080244224</int>
@@ -1972,7 +1975,6 @@ AAMAAAABAAEAAAFTAAMAAAAEAAAFwgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 											<int key="NSvFlags">268</int>
 											<string key="NSFrame">{{107, 6}, {112, 28}}</string>
 											<reference key="NSSuperview" ref="455863953"/>
-											<reference key="NSWindow"/>
 											<bool key="NSEnabled">YES</bool>
 											<object class="NSTextFieldCell" key="NSCell" id="287715285">
 												<int key="NSCellFlags">67239424</int>
@@ -1987,12 +1989,10 @@ AAMAAAABAAEAAAFTAAMAAAAEAAAFwgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 									</array>
 									<string key="NSFrame">{{1, 1}, {280, 198}}</string>
 									<reference key="NSSuperview" ref="103672921"/>
-									<reference key="NSWindow"/>
 								</object>
 							</array>
 							<string key="NSFrame">{{201, 41}, {282, 214}}</string>
 							<reference key="NSSuperview" ref="316503432"/>
-							<reference key="NSWindow"/>
 							<string key="NSOffsets">{0, 0}</string>
 							<object class="NSTextFieldCell" key="NSTitleCell">
 								<int key="NSCellFlags">67239424</int>
@@ -2016,7 +2016,6 @@ AAMAAAABAAEAAAFTAAMAAAAEAAAFwgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{424, 18}, {56, 19}}</string>
 							<reference key="NSSuperview" ref="316503432"/>
-							<reference key="NSWindow"/>
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSButtonCell" key="NSCell" id="775922081">
 								<int key="NSCellFlags">-2080244224</int>
@@ -2037,7 +2036,6 @@ AAMAAAABAAEAAAFTAAMAAAAEAAAFwgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{326, 18}, {90, 19}}</string>
 							<reference key="NSSuperview" ref="316503432"/>
-							<reference key="NSWindow"/>
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSButtonCell" key="NSCell" id="987585477">
 								<int key="NSCellFlags">-2080244224</int>
@@ -2062,12 +2060,10 @@ AAMAAAABAAEAAAFTAAMAAAAEAAAFwgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 									<int key="NSvFlags">256</int>
 									<string key="NSFrame">{{1, 1}, {180, 112}}</string>
 									<reference key="NSSuperview" ref="975506927"/>
-									<reference key="NSWindow"/>
 								</object>
 							</array>
 							<string key="NSFrame">{{17, 41}, {182, 128}}</string>
 							<reference key="NSSuperview" ref="316503432"/>
-							<reference key="NSWindow"/>
 							<string key="NSOffsets">{0, 0}</string>
 							<object class="NSTextFieldCell" key="NSTitleCell">
 								<int key="NSCellFlags">67239424</int>
@@ -2091,7 +2087,6 @@ AAMAAAABAAEAAAFTAAMAAAAEAAAFwgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{17, 20}, {36, 11}}</string>
 							<reference key="NSSuperview" ref="316503432"/>
-							<reference key="NSWindow"/>
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSTextFieldCell" key="NSCell" id="433883259">
 								<int key="NSCellFlags">68288064</int>
@@ -2109,8 +2104,6 @@ AAMAAAABAAEAAAFTAAMAAAAEAAAFwgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 						</object>
 					</array>
 					<string key="NSFrameSize">{500, 275}</string>
-					<reference key="NSSuperview"/>
-					<reference key="NSWindow"/>
 				</object>
 				<string key="NSScreenRect">{{0, 0}, {1920, 1178}}</string>
 				<string key="NSMaxSize">{1.79769e+308, 1.79769e+308}</string>
@@ -2857,14 +2850,6 @@ AAMAAAABAAEAAAFTAAMAAAAEAAAFwgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 					<int key="connectionID">634</int>
 				</object>
 				<object class="IBConnectionRecord">
-					<object class="IBActionConnection" key="connection">
-						<string key="label">attemptConfiguration:</string>
-						<reference key="source" ref="974313228"/>
-						<reference key="destination" ref="285556293"/>
-					</object>
-					<int key="connectionID">635</int>
-				</object>
-				<object class="IBConnectionRecord">
 					<object class="IBBindingConnection" key="connection">
 						<string key="label">enabled2: isAuthorized</string>
 						<reference key="source" ref="285556293"/>
@@ -3073,14 +3058,6 @@ AAMAAAABAAEAAAFTAAMAAAAEAAAFwgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 						<reference key="destination" ref="1025098791"/>
 					</object>
 					<int key="connectionID">760</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBOutletConnection" key="connection">
-						<string key="label">enableButton</string>
-						<reference key="source" ref="974313228"/>
-						<reference key="destination" ref="480469536"/>
-					</object>
-					<int key="connectionID">761</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBActionConnection" key="connection">
@@ -3625,6 +3602,30 @@ AAMAAAABAAEAAAFTAAMAAAAEAAAFwgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 						<reference key="destination" ref="98987299"/>
 					</object>
 					<int key="connectionID">944</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">enabledCheckbox</string>
+						<reference key="source" ref="974313228"/>
+						<reference key="destination" ref="480469536"/>
+					</object>
+					<int key="connectionID">945</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">statusText</string>
+						<reference key="source" ref="1021904126"/>
+						<reference key="destination" ref="468173298"/>
+					</object>
+					<int key="connectionID">949</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">attemptConfiguration:</string>
+						<reference key="source" ref="1021904126"/>
+						<reference key="destination" ref="285556293"/>
+					</object>
+					<int key="connectionID">950</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -4405,6 +4406,7 @@ AAMAAAABAAEAAAFTAAMAAAAEAAAFwgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 						<array class="NSMutableArray" key="children">
 							<reference ref="202516189"/>
 							<reference ref="98987299"/>
+							<reference ref="468173298"/>
 						</array>
 						<reference key="parent" ref="757767177"/>
 					</object>
@@ -4729,6 +4731,19 @@ AAMAAAABAAEAAAFTAAMAAAAEAAAFwgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 						<reference key="object" ref="284159895"/>
 						<reference key="parent" ref="98987299"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">946</int>
+						<reference key="object" ref="468173298"/>
+						<array class="NSMutableArray" key="children">
+							<reference ref="902495398"/>
+						</array>
+						<reference key="parent" ref="441654173"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">947</int>
+						<reference key="object" ref="902495398"/>
+						<reference key="parent" ref="468173298"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -4946,6 +4961,8 @@ AAMAAAABAAEAAAFTAAMAAAAEAAAFwgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 				<string key="937.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="942.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="943.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="946.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="947.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<object class="NSMutableDictionary" key="99.IBAttributePlaceholdersKey">
 					<string key="NS.key.0">ToolTip</string>
 					<object class="IBToolTipAttribute" key="NS.object.0">
@@ -4960,7 +4977,7 @@ AAMAAAABAAEAAAFTAAMAAAAEAAAFwgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">944</int>
+			<int key="maxID">950</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -5002,8 +5019,13 @@ AAMAAAABAAEAAAFTAAMAAAAEAAAFwgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 				<object class="IBPartialClassDescription">
 					<string key="className">ConfigurationController</string>
 					<string key="superclassName">NSObject</string>
+					<dictionary class="NSMutableDictionary" key="actions">
+						<string key="attemptConfiguration:">id</string>
+						<string key="closeConfigurationSheet:">id</string>
+					</dictionary>
 					<dictionary class="NSMutableDictionary" key="outlets">
 						<string key="autoConfigButton">NSButton</string>
+						<string key="closeConfigurationButton">NSButton</string>
 						<string key="configPanel">NSPanel</string>
 						<string key="passengerApacheConfigCheckbox">NSButton</string>
 						<string key="passengerApacheConfigPathControl">NSPathControl</string>
@@ -5016,6 +5038,7 @@ AAMAAAABAAEAAAFTAAMAAAAEAAAFwgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 						<string key="rubyPathControl">NSPathControl</string>
 						<string key="sitesDirectoryCheckbox">NSButton</string>
 						<string key="sitesDirectoryPathControl">NSPathControl</string>
+						<string key="statusText">NSTextField</string>
 					</dictionary>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
@@ -5065,7 +5088,7 @@ AAMAAAABAAEAAAFTAAMAAAAEAAAFwgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 						<string key="browseButton">NSButton</string>
 						<string key="configController">ConfigurationController</string>
 						<string key="configureButton">NSButton</string>
-						<string key="enableButton">NSButton</string>
+						<string key="enabledCheckbox">NSButton</string>
 						<string key="folderField">NSTextField</string>
 						<string key="hasChangesImage">NSImageView</string>
 						<string key="helpButton">NSButton</string>
